src/objects/MUSW__Fee__c.object
<CustomObject>
    <description>Fees/Fines associated to Permits, Complaints, Planning Applications</description>
	<fields>
        <fullName>Licensee_Email__c</fullName>
        <formula>MUSW__License2__r.MUSW__Primary_Licensee__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFRS_AR_Code__c</fullName>
        <defaultValue>&quot;AFR-MG-MS-SubSrc-GLAR&quot;</defaultValue>
        <label>xAFRS AR Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFRS_Cash_Code__c</fullName>
        <defaultValue>&quot;AFR-MG-MS-SubSrc-GLCH&quot;</defaultValue>
        <label>xAFRS Cash Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFRS_Revenue_Code__c</fullName>
        <defaultValue>&quot;AFR-MG-MS-SubSrc-GLRV&quot;</defaultValue>
        <label>AFRS Revenue Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_Date__c</fullName>
        <label>AR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ARed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acc_AR_Code__c</fullName>
        <formula>&quot;AR_&quot;+text(MUSW__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc AR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Cash_Code__c</fullName>
        <formula>&quot;Cash_&quot;+text(MUSW__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Cash Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Rev_Code__c</fullName>
        <formula>&quot;Rev_&quot;+text(MUSW__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acc Rev Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>4733000</fullName>
                </value>
                <value>
                    <fullName>4730000</fullName>
                </value>
                <value>
                    <fullName>4732000</fullName>
                </value>
                <value>
                    <fullName>4655000</fullName>
                </value>
                <value>
                    <fullName>4990000</fullName>
                </value>
                <value>
                    <fullName>4656000</fullName>
                </value>
                <value>
                    <fullName>5212000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CREDENT</fullName>
                </value>
                <value>
                    <fullName>EXAM</fullName>
                </value>
                <value>
                    <fullName>PLANREV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Code__c</fullName>
        <label>Agency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Agency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency_Number__c</fullName>
        <label>Agency Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application Type</description>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriation__c</fullName>
        <label>Appropriation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>22100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGBK__Cart_Cashier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart Cashier</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Fees (Cart Cashier)</relationshipLabel>
        <relationshipName>CashierFees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart_Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart</label>
        <referenceTo>BGBK__Cart__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BGBK__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>BGBK__Bill__c</referenceTo>
        <relationshipLabel>Invoiced Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGBK__Return__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return</label>
        <referenceTo>BGBK__Return__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Period__c</fullName>
        <label>Budget Period</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fees (Contact)</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contest</label>
        <referenceTo>BGCK__Contest__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>MUSW__License2__r.MUSW__Primary_Licensee__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1652100000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endorsement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Endorsement</label>
        <referenceTo>Endorsement__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_amount_for_labor_charge__c</fullName>
        <formula>IF(ISPICKVAL(MUSW__Type__c, &apos;Trust Expense - Staff Hours&apos;), ( $Setup.Trust_Fund_Setting__c.Hour_Rate__c  *  Labor_Hours__c )  + ($Setup.Trust_Fund_Setting__c.Hour_Rate__c  *  (Labor_Minutes__c  / 60)),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee amount for labor charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_amount_for_mileage__c</fullName>
        <formula>IF(ISPICKVAL(MUSW__Type__c, &apos;Trust Expense - Mileage&apos;),Mileage__c  *  $Setup.Trust_Fund_Setting__c.Mileage_Rate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee amount for mileage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fine</description>
        <label>Fine</label>
        <referenceTo>Fine__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handling_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handling Fee</label>
        <referenceTo>MUSW__Fee__c</referenceTo>
        <relationshipLabel>Voided Fees</relationshipLabel>
        <relationshipName>VoidedFees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Labor_Hours__c</fullName>
        <label>Labor Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labor_Minutes__c</fullName>
        <label>Labor Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Need to add fee/payment ability on legal actions so they can charge fines.</description>
        <label>Legal Action</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <description>Captures the related License number</description>
        <formula>IF(OR(ISNULL( Fine__c ), Fine__c = ""), 
			IF(OR(ISNULL( MUSW__Permit2__c ), MUSW__Permit2__c = ""), 
			If(OR(ISNULL( MUSW__Application2__c), MUSW__Application2__c =""), 
			If(OR(ISNULL( Renewal_Application__c), Renewal_Application__c = ""), 
			If(OR(ISNULL( Request__c), Request__c = ""), 
			If(OR(ISNULL( Miscellaneous_Fee__c), Miscellaneous_Fee__c = ""), 
			IF(OR(ISNULL( MUSW__License2__c ), MUSW__License2__c = ""), 
			"", MUSW__License2__r.Name), 
			Miscellaneous_Fee__r.Name), 
			Request__r.Name), 
			Renewal_Application__r.Name), 
			MUSW__Application2__r.Name), 
			MUSW__Permit2__r.Name), 
			Fine__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Amended_Amount__c</fullName>
        <description>Optional. This is used in case the Fee amount needs to be changed and the system needs to keep track of the original amount.</description>
        <label>Amended Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>System populates the value when a payment is allocated to the fee.</description>
        <label>Amount Paid</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount_Waived__c</fullName>
        <description>Amount that needs to be waived. This impacts the outstanding amount of the fee.</description>
        <label>Waived Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Amount__c</fullName>
        <description>An obligation amount (fee) that needs to be paid.</description>
        <label>Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Application2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated application record.</description>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Check_Number__c</fullName>
        <description>Deprecated. Used for the simple implementation of historical data.</description>
        <label>Check Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated complaint record.</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated. Refer to the MUSW__Complaint2__c lookup field.</description>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint__c</referenceTo>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Effective_Date__c</fullName>
        <description>Deprecated</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Fee_Paid_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated</description>
        <label>Fee Paid By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fees Paid</relationshipLabel>
        <relationshipName>Fees_Paid</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Fee_Paid_Date2__c</fullName>
        <description>Date the fee payment was made. The System populates the value when a payment is allocated to the fee.</description>
        <label>Fee Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Fee_Paid_Date__c</fullName>
        <description>Deprecated</description>
        <label>Fee Paid Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Fee_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system sets this value to true when the outstanding amount is $0.</description>
        <label>Paid in Full</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Group__c</fullName>
        <description>Deprecated</description>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group 1</fullName>
                </value>
                <value>
                    <fullName>Group 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__License1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated</description>
        <label>License</label>
        <referenceTo>MUSW__License1__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__License2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated license record.</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated</description>
        <label>License</label>
        <referenceTo>MUSW__License__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Outstanding_Fee__c</fullName>
        <description>Amount outstanding based on the following formula: (Amount) - (Amended Amount) - (Waived Amount) - (Paid Amount).</description>
        <formula>If(MUSW__Amount__c - MUSW__Amount_Waived__c - MUSW__Amount_Paid__c - MUSW__Amended_Amount__c &lt; 0, 0, MUSW__Amount__c - MUSW__Amount_Waived__c - MUSW__Amount_Paid__c - MUSW__Amended_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Paid_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated. Used for the simple implementation of historical data.</description>
        <label>Paid By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Fees Paid</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Payment_Comment__c</fullName>
        <description>Deprecated. Used for the simple implementation of historical data.</description>
        <label>Payment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Payment_Method__c</fullName>
        <description>Deprecated. Used for the simple implementation of historical data.</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated permit record.</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated. Used for the simple implementation of historical data.</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit__c</referenceTo>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Planning_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated planning application record.</description>
        <label>Planning Application</label>
        <referenceTo>MUSW__Planning_Application__c</referenceTo>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Price_Per_Unit__c</fullName>
        <description>Optional. used if the Amount needs to be derived based on Quantity and price per unit.</description>
        <inlineHelpText>Price per Quantity</inlineHelpText>
        <label>Price Per Unit</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Optional. used if the Amount needs to be derived based on Quantity and price per unit.</description>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Rank__c</fullName>
        <defaultValue>999</defaultValue>
        <description>Priority of the payment order. The fee with the lower ranking number gets paid first. For example, rank &quot;2&quot; would be paid before rank &quot;4&quot;.</description>
        <label>Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Receipt_Number__c</fullName>
        <description>Deprecated. Used for the simple implementation of historical data.</description>
        <label>Receipt Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>System field.</description>
        <label>Test</label>
        <referenceTo>BGCM__Test__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <description>The type of fee. Each type may have a different accounting code.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fine</fullName>
                </value>
                <value>
                    <fullName>DHP</fullName>
                </value>
                <value>
                    <fullName>Trust Expense - Staff Hours</fullName>
                </value>
                <value>
                    <fullName>Trust Expense - Mileage</fullName>
                </value>
                <value>
                    <fullName>Trust - Prearrangement Funeral Services Deposit</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance (AMR)</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Miscellaneous Fee</label>
        <referenceTo>Miscellaneous_Fee__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prof_Code__c</fullName>
        <formula>MUSW__License2__r.Profession_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profession Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession_Code__c</fullName>
        <label>Profession Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <formula>Text(MUSW__License2__r.Application_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>16500P2PSSP</fullName>
                </value>
                <value>
                    <fullName>16500P2UDCP</fullName>
                </value>
                <value>
                    <fullName>16500P2MHTL</fullName>
                </value>
                <value>
                    <fullName>16500P2MHPL</fullName>
                </value>
                <value>
                    <fullName>16500P2ELEP</fullName>
                </value>
                <value>
                    <fullName>16500P2HVCP</fullName>
                </value>
                <value>
                    <fullName>16500P2PLBP</fullName>
                </value>
                <value>
                    <fullName>16500P2PLLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <formula>IF(OR(ISNULL( MUSW__Permit2__c ), MUSW__Permit2__c = &quot;&quot;),
IF(OR(ISNULL( MUSW__Application2__c ), MUSW__Application2__c = &quot;&quot;),
IF(OR(ISNULL( MUSW__License2__c ), MUSW__License2__c = &quot;&quot;),
&quot;&quot;,
MUSW__License2__r.MUSW__Primary_Licensee__c ),
MUSW__Application2__r.MUSW__Account__c ),
MUSW__Permit2__r.MUSW__Account__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Days_since_created__c</fullName>
        <description>Captures Days since created</description>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_To_Id__c</fullName>
        <formula>IF(MUSW__Permit2__c != null, MUSW__Permit2__c, 
IF(MUSW__Application2__c != null, MUSW__Application2__c,
IF(MUSW__License2__c != null, MUSW__License2__c, 
IF(Renewal_Application__c!=null,Renewal_Application__c, 
IF(Fine__c!=null,Fine__c, 
null)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To_Name__c</fullName>
        <formula>IF(MUSW__Permit2__c != null, MUSW__Permit2__r.Name, 
IF(MUSW__Application2__c != null, MUSW__Application2__r.Name, 
IF(MUSW__License2__c != null, MUSW__License2__r.Name, 
IF(Renewal_Application__c!=null,Renewal_Application__r.Name, 
IF(Fine__c!=null,Fine__r.Name, 
null)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To_Type__c</fullName>
        <formula>IF(OR(ISNULL( Fine__c ), Fine__c = &quot;&quot;), 
IF(OR(ISNULL( MUSW__Permit2__c ), MUSW__Permit2__c = &quot;&quot;), 
If(OR(ISNULL( MUSW__Application2__c ), MUSW__Application2__c = &quot;&quot;), 
If(OR(ISNULL( Renewal_Application__c), Renewal_Application__c= &quot;&quot;), 
IF(OR(ISNULL( MUSW__License2__c ), MUSW__License2__c = &quot;&quot;), 
&quot;&quot;, &quot;Credential&quot;), 
TEXT(Renewal_Application__r.Renewal_Reinstatement_Type__c)), 
&quot;Service Request&quot;), 
TEXT(MUSW__Permit2__r.Object_Type__c)),
&quot;Fine&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <formula>IF(OR(ISNULL( Fine__c ), Fine__c = &quot;&quot;), 
IF(OR(ISNULL( MUSW__Permit2__c ), MUSW__Permit2__c = &quot;&quot;), 
If(OR(ISNULL( MUSW__Application2__c), MUSW__Application2__c =&quot;&quot;), 
If(OR(ISNULL( Renewal_Application__c), Renewal_Application__c = &quot;&quot;), 
If(OR(ISNULL( Request__c), Request__c = &quot;&quot;), 
If(OR(ISNULL( Miscellaneous_Fee__c), Miscellaneous_Fee__c = &quot;&quot;), 
IF(OR(ISNULL( MUSW__License2__c ), MUSW__License2__c = &quot;&quot;), 
&quot;&quot;, HYPERLINK( &quot;../&quot; &amp; MUSW__License2__c, MUSW__License2__r.Name ,&quot;_parent&quot; )), 
HYPERLINK( &quot;../&quot; &amp; Miscellaneous_Fee__c, Miscellaneous_Fee__r.Name ,&quot;_parent&quot; )),
HYPERLINK( &quot;../&quot; &amp; Request__c,Request__r.Name,&quot;_parent&quot; )), 
HYPERLINK( &quot;../&quot; &amp; Renewal_Application__c,Renewal_Application__r.Name,&quot;_parent&quot; )), 
HYPERLINK( &quot;../&quot; &amp; MUSW__Application2__c,MUSW__Application2__r.Name,&quot;_parent&quot; )), 
HYPERLINK( &quot;../&quot; &amp; MUSW__Permit2__c,MUSW__Permit2__r.Name,&quot;_parent&quot; )), 
HYPERLINK( &quot;../&quot; &amp; Fine__c,Fine__r.Name,&quot;_parent&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related To</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Fee_Name__c</fullName>
        <label>Fee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Is the fee related to a  renewal application?</description>
        <label>Renewal Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Account_Code__c</fullName>
        <label>Revenue Account Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Code__c</fullName>
        <defaultValue>&quot;AFR-MG-MS-SubSrc-GLRV&quot;</defaultValue>
        <label>Revenue Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_AR_Code__c</fullName>
        <defaultValue>&quot;TMS-MG-MS-SubSrc-GLAR&quot;</defaultValue>
        <label>xTMS AR Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Cash_Code__c</fullName>
        <defaultValue>&quot;TMS-MG-MS-SubSrc-GLCH&quot;</defaultValue>
        <label>xTMS Cash Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMS_Revenue_Code__c</fullName>
        <defaultValue>&quot;TMS-MG-MS-SubSrc-GLRV&quot;</defaultValue>
        <label>xTMS Revenue Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsert_ID__c</fullName>
        <label>Upsert ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>